<resources>
    <string name="app_name">SAAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login_signup">Login/SignUp</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_email">Change Email</string>
    <string name="action_change_password">Change Password</string>
    <string name="share_fragment">Share</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="donate_fragment">Donate Now</string>
    <string name="team_fragment">Team</string>
    <string name="admin_block">IIT+Patna+Administration+Block</string>
    <string name="contact_fragment">Contact Us</string>
    <string name="gallery_fragment">Gallery</string>
    <string name="view_profile_fragment">View Profile</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="change_password_fragment">Change Password</string>
    <string name="no_internet">No Internet Connection Found.\nCheck Your Connection</string>
    <string name="saar_email">saar@iitp.ac.in</string>
    <string name="photo">Photo</string>
    <string name="enter_all_fields">Please enter all fields</string>
    <string name="videos">Videos</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>
    <string name="logout_confirm_alert">Are you sure you want to logout?</string>
    <string name="member_1">Vivek Garg</string>
    <string name="member_2">Mohit Kishore</string>
    <string name="member_3">Hit Vardhan</string>
    <string name="member_4">Utkarsh</string>
    <string name="member_5">Raghu</string>
    <string name="member_6">Anuj Shastri</string>
    <string name="member_7">Saurabh Gupta</string>
    <string name="member_8">Avinash Singh</string>
    <string name="member_9">Himanshu Gupta</string>
    <string name="member_10">Vatsal Singhal</string>
    <string name="member_11">Adarsh</string>
    <string name="member_12">Lavanya Naresh</string>
    <string name="member_13">Gaurav Sharma</string>
    <string name="member_14">Rakesh Kumar</string>
    <string name="member_15">Diptanil Sarkar</string>
    <string name="member_16">Aman Kumar</string>
    <string name="member_17">Sahebjeet</string>
    <string name="member_18">Aarohan Panda</string>
    <string name="member_19">Akash Balaji</string>
    <string name="member_20">Anuj Yadav</string>
    <string name="member_21">Nischal</string>
    <string name="member_22">Atul Gupta</string>
    <string name="member_23">Rahul Verma</string>
    <string name="member_24">Gaurav Pratap Singh</string>
    <string name="member_25">Aparsh Gupta</string>
    <string name="member_26">Somenath Sarkar</string>
    <string name="member_27">Pranay</string>
    <string name="member_28">Amartya Mondal</string>
    <string name="member_29">Abhinav Gyan</string>
    <string name="core_committee">CORE COMMITTEE</string>
    <string name="executive_committee">EXECUTIVE COMMITTEE</string>
    <string name="advisor">ADVISOR</string>
    <string name="general_sec">General Secretary, SAAR</string>
    <string name="coordinator_1">Coordinator, Finance and Sponsorship</string>
    <string name="coordinator_2">Coordinator, Design</string>
    <string name="coordinator_3">Coordinator, Public and Alumni Relations</string>
    <string name="coordinator_4">Coordinator, Events and Management</string>
    <string name="coordinator_5">Coordinator, Web and App</string>
    <string name="committee_1">Finance and Sponsorship</string>
    <string name="committee_2">Design</string>
    <string name="committee_3">Public and Alumni Relations</string>
    <string name="committee_4">Events and Management</string>
    <string name="committee_5">Web and App</string>
    <string name="team_fb_intent_error">Something Went Wrong</string>
    <string name="about_us_fragment">About Us fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="about_us">About Us</string>
    <string name="background">Background</string>
    <string name="objectives">Objectives</string>
    <string name="missions">Missions</string>
    <string name="initiatives">Initiatives</string>
    <string name="about_us_background_details">Indian Institute of Technology Patna is an Institution of National Importance
        and a new addition to the hallowed IIT System that has proven its worth in last 50+ years. The alumni of IIT are
        internationally known for their caliber and contribution. Since its inception in 2008, IIT Patna- like its young as
        well as established peers- has pursued excellence with steadfast determination. \n\n IITP has 6 Engineering Disciplines:
        Civil and Environmental Engineering, Chemical and Biochemical Engineering, Computer Science and Engineering,
        Electrical Engineering, Mechanical Engineering and Material Science and Engineering; 2 Science Disciplines:
        Physics and Chemistry; Humanities and Social Sciences; Mathematics. Its faculty members are experts in their
        respective fields. The thriving PhD, M.Tech and B.Tech programs of IITP see the students and faculty publish
        prolifically, win competitions, come up with innovations and build societal awareness.</string>
    <string name="about_us_objectives_details">Established in 2018, Students Association for Alumni Relations (SAAR),
        has been created to maintain a life-long connection between the Institute and its alumni (more than 1500 at present).
        The committee works in coordination with the institute to create a platform that helps in connecting the former students
        with their alma mater \n\n Filled with extremely dedicated volunteers, SAAR works to connect alumni, support students and
        build an unforgettable Institute experience through a diversity of events, programming and services. With the purpose of
        creating a strong network of alumni, guiding and mentoring juniors, developing the institute, SAAR works towards
        creating strong alumni relations.</string>
    <string name="about_us_missions_details">A bond binds us to the place that guides us towards a fun-filled and fulfilling future.......
        and that place is our college. No matter where we go, no matter how old our bones grow, bonds always remain strong. We plan
        on bringing old ‘Partners in Crime’ back together and for that the primary mission of SAAR (Students’ Association for Alumni Relations)
        is to create a connection with all the Alumni of IIT Patna and to strengthen that relation. We also plan on getting in touch with our
        Alumni residing in other countries.\n\n SAAR aims at spending a defined portion of its manpower, intelligence and resources for the
        betterment of society through: \n\n
        1. Educational and other assistance to students belonging to socially/economically weaker sections. \n\n
        2. Promoting, encouraging and supporting the social and cultural heritage and traditions of our society. \n\n
        3. Proactive actions for well-being of the society as per the needs. \n\n
        4. Incorporating sustainability in education plans, strategies and processes.</string>
    <string name="about_us_initiatives_details">SAAR plans on creating a discussion forum, where students can interact with the Alumni to get their
        doubts answered.Along with this, SAAR plans on conducting Alumni Chapter in various cities across the country to enhance the relations.\n\n
        To further strengthen the relations between the Alumni and the institute, SAAR also conducts felicitation programs and Alumni talks. \n\n
        SAAR is in process (via regular talks and discussions) to bring reputed industries so as to encourage them to set up research centers and
        collaborative program through them. The proposed center is expected to be set up with a funding from these industries inside IITP campus
        and IITP will deliver the knowledge base to give a meaningful solution to their day to day industrial challenges, problems etc.\n\n
        Through National Service Scheme (NSS) activities SAAR is already actively working for the empowered of impoverished sections of humanity and
        for the nearby villages around IITP campus apart from donation of books, copies and clothes to these society people IITP students are
        also teaching them on a regular basis.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip_login">Skip Login</string>
    <string name="saar_login">SAAR  Login</string>
    <string name="saar_signup">SAAR  Sign Up</string>
    <string name="verify_email">Verify your OTP</string>
    <string name="credential_empty">Email or password field cannot be empty.</string>
    <string name="loggedin">You have successfully logged in.</string>
    <string name="error_loggingin">Failed to log in.</string>
    <string name="login_progress">Logging in...</string>
    <string name="empty_edittext_in_signup">Please fill all necessary fields for registration</string>
    <string name="college_roll_number">College Roll Number</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="fb_profile_link">Fb Profile Link (optional)</string>
    <string name="linkedin_profile_link">LinkedIn Profile Link (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="present_employer_educational_inst">Present Employer/ Educational Inst.</string>
    <string name="employment_type">Employment Type</string>
    <string name="designation">Designation</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="achievements">Achievements after Graduation</string>
    <string name="signup_ok">OK</string>
    <string name="signup_error">Error</string>
    <string name="signup_progress">Registering...</string>
    <string-array name="graduation_year_array">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="how_to_donate">How To Donate ?</string>
    <string name="donate_now">Donate Now</string>
    <string name="donate_steps">
        1. Click on the following button.\n\n
        2. Accept the Terms and Conditions and proceed.\n\n
        3. In the \"State of Institution\", select Bihar.\n\n
        4. In the \"Type of Institution\", select Educational Institutions and Click on \"GO\".\n\n
        5. Now, in the Name of Institution, find \"INDIAN INSTITUTE OF TECHNOLOGY PATNA\" and click on SUBMIT.\n\n
        6. Finally in the Payment Category, Select \"Alumni Cell, IIT Patna\" to make the contribution.\n\n</string>
    <string name="verification">Verification</string>
    <string name="otp_text">Please type the verification code sent on your registered email id</string>
    <string name="otp_resend">Didn\'t receive the otp?</string>
    <string name="resend">Resend otp</string>
</resources>