<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_activities_background_color"
    tools:context=".OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/donate_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/verification"
            android:textColor="@color/black"
            android:textSize="@dimen/otp_header_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_big"
            android:text="@string/otp_text"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/otpView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:pinLength="5" />

        <EditText
            android:id="@+id/otp_rollno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_big"
            android:hint="@string/college_roll_number"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/otp_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginBottom="@dimen/margin_big"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_big"
            android:text="@string/otp_resend" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/round_button"
            android:padding="@dimen/padding_big"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>