<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fragments_activities_background_color"
    tools:context=".Donate.DonateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingBottom="@dimen/donate_padding"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:text="@string/how_to_donate"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_big" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:text="@string/donate_steps"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_medium" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button"
                android:fontFamily="sans-serif"
                android:padding="@dimen/padding_medium"
                android:text="@string/donate_now"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_medium" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>